more updates; not specific

--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,10 @@
                         Github: <a href="https://github.com/vikrammanikantan">vikrammanikantan</a>
                         <br>
                         Publications: <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en">Google Scholar</a>, <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22">Astrophysics Data System (ADS)</a>
+                        <br>
+                        ORCID: <a href="https://orcid.org/0000-0003-0547-6158">0000-0003-0547-6158</a>
+                        <br>
+                        Department Profile: <a href="https://astro.arizona.edu/person/vikram-manikantan">Steward Observatory</a>
                     </p>
                 </div>
             </div>
