--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
                 </div>
 
                 <div class="landing-info">
-                    <p>My name is <mark>Vikram Manikantan</mark>. I am a computational astrophysicist and </p>
-                    <h2>Astrophysics PhD Candidate</h2>
+                    <p>My name is <mark>Vikram Manikantan</mark>. I am an Astrophysics PhD Candidate and </p>
+                    <h2>Computational Astrophysicist</h2>
                     <p> at <a href="https://astro.arizona.edu/">Steward Observatory</a>, at the University of Arizona. I study</p>
                     <h2>binary black holes, accretion disks, relativistic jets, and their multi-messenger emission.</h2>
 
                     <p style="font-size: 20px;">
-                        <!-- and I built <a href="https://github.com/vikrammanikantan/vikrammanikantan.github.io/">this website from scratch</a> -->
-                        contact me: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a>, 
+                        contact me: <a href="mailto:vik@arizona.edu">vik@arizona.edu</a>
                         <!-- <a href="https://bsky.app/profile/vikmani.bsky.social">@vikmani.bsky.social</a> -->
                         <br> other links: 
+                        <!-- <a href="files/cv_latest.pdf">CV</a>, -->
                         <a href="https://github.com/vikrammanikantan">GitHub</a>, 
-                        <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en">Google Scholar</a>, <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22">ADS</a>
+                        <a href="https://scholar.google.com/citations?user=cscvnHUAAAAJ&hl=en">Google Scholar</a>, 
+                        <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Manikantan%2C%20Vikram%22">ADS</a>
                     </p>
                 </div>
 
