--- a/music.html
+++ b/music.html
@@ -38,11 +38,12 @@
                         <img src="images/spacedrafts_timeline.png" alt="Astronomy on Tap Tucson">
                     </div>
 
-                    <h2>Steward Social Media </h2>
+                    <!-- TODO: Add more outreach activities -->
+                    <!-- <h2>Steward Social Media </h2>
 
                     <p>[<a class="nu" href="https://twitter.com/StewardAstro">Twitter</a>]</p>
 
-                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our <a href="https://www.instagram.com/stewardobservatory">Instagram</a>, <a href="https://twitter.com/StewardAstro">Twitter</a>, <a href="https://bsky.app/profile/stewardobservatory.bsky.social">Bluesky</a> and <a href="https://www.facebook.com/StewardAstronomy/">Facebook</a> accounts, as well as developing content to post up to three times a week.</p>
+                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our <a href="https://www.instagram.com/stewardobservatory">Instagram</a>, <a href="https://twitter.com/StewardAstro">Twitter</a>, <a href="https://bsky.app/profile/stewardobservatory.bsky.social">Bluesky</a> and <a href="https://www.facebook.com/StewardAstronomy/">Facebook</a> accounts, as well as developing content to post up to three times a week.</p> -->
                 </div>
                     
                 
@@ -50,7 +51,12 @@
 
             <div class="section" id="sports">  
                 <h2> Intramural Softball: Steward Observatory Hit Squad (StrOHS) </h2>
-                <p> Captained the team to an intramural championship in Summer 2025!</p>
+                <p> Captained the Steward Observatory team to an intramural championship in Summer 2025!</p>
+
+                <div class="image-row">
+                        <img src="images/softball.jpg" alt="Softball Team Photo">
+                        <img src="images/softball2.jpg" alt="Softball Team Photo">
+                    </div>
             </div>
 
             <div class="section" id="music">  
