--- a/teaching.html
+++ b/teaching.html
@@ -31,14 +31,16 @@
                 <h1> Teaching/Mentorship </h1>
                 <div class="content" style="width: 100%; margin: auto;">
                     <p>
-                        I am passionate about developing programs that increase undergraduate students success in astrophysics research. I currently focus on two aspects of this: 1. training students with <mark style="background-color: var(--highlight-dark);">fundamental skills</mark> needed to perform leading research, and 2. providing mentorship and a support structure to create <mark style="background-color: var(--highlight-dark);">sustainable success</mark> and increase retention of underrepresented groups.
+                        I am passionate about developing programs that increase undergraduate student success in astrophysics research. I currently focus on two aspects of this: 1. training students with <mark style="background-color: var(--highlight-dark);">fundamental technical skills</mark> for research, and 2. providing mentorship and a support structure to create <mark style="background-color: var(--highlight-dark);">sustainable success</mark> and increase retention of underrepresented groups.
                     </p>
                     <p>
-                        To do this, I have taken leadership roles in several programs at the University of Arizona, including the <a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">TIMESTEP Research Apprenticeship</a> program and the <a href="">Computational and Mathematical Program for incoming Arizona Science Students</a> (COMPASS). I am also interested in, and attended a workshop on, developing <a href="https://ur.arizona.edu/content/course-based-research-undergraduate-experiences-cures"> Course-based Undergraduate Research Experiences</a> (CUREs) to increase undergraduate research opportunities. 
+                        I have taken leadership roles in several programs at the University of Arizona, including the <a href="#compass" target="_self">Computational and Mathematical Program for incoming Arizona Science Students</a> (COMPASS) and the <a href="#timestep_apprenticeship" target="_self">TIMESTEP Research Apprenticeship</a> program. I have also been the Teaching Assistant for <a href="#300a" target="_self">Astro 300A: Dynamics</a> and <a href="#202" target="_self">Astro 202: Life in the Universe</a>. 
+                        
+                        <!-- Finally, I am also interested in, and attended a workshop on, developing <a href="https://ur.arizona.edu/content/course-based-research-undergraduate-experiences-cures"> Course-based Undergraduate Research Experiences</a> (CUREs) to increase undergraduate research opportunities. Currently, I am working with faculty to develop a Research Methods in Astrophysics course for 2nd year undergraduate students based on CURE principles. -->
                     </p>
                 </div>
 
-                <h2> 
+                <h2 id="compass">
                     COMPASS: Computational and Mathematical Program for incoming Arizona Science Students 
                 </h2>
                 <p>
@@ -53,17 +55,37 @@
                 </p>
                 <img src="images/compass.jpg" alt="COMPASS" style="width: 100%; display: block; margin-left: auto; margin-right: auto; padding-bottom: 15px;">
 
-                <h2>
+                <h2 id="timestep_apprenticeship">
                     TIMESTEP Research Apprenticeship 
                 </h2>
                 <p>
-                    [<a class="nu" href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">website</a>]
+                    [<a class="nu" href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">website</a>] 
+                    <!-- [<a href="https://docs.google.com/presentation/d/1iQprPjeJjMgYqS9lKy95kyroSpeU1Oyq8fR-11elurU/edit?usp=sharing">Git tutorial</a>] [<a href="files/intro_to_bash_worksheet.pdf">Bash tutorial</a>] [<a href="https://colab.research.google.com/drive/1Usb8Kb2WwW-CPDYKnxulZc0f7beIYsDT">Python basics</a>] [<a href="https://colab.research.google.com/drive/1QNzVruPZmIiatEZeYDB3AjEj0Ao0ZSc2"> Numpy and Matplotlib</a>] -->
                 </p>
                 <p>
-                    <mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program; a mentorship program that provides second year undergraduates with a paid opportunity to build technical and professional skills applicable to both research
+                    <mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program, a mentorship program that provides second year undergraduates with a paid opportunity to build technical and professional skills applicable to both research and industry careers. The program matches students with faculty research advisors to conduct research over the academic year, and provides mentorship and professional/technical development workshops to lower barriers to entry into research.
                 </p>
-
-                <h2> 
+                <p>
+                    As a graduate student coordinator, I develop educational presentations, worksheets, and python notebooks, lead weekly hands-on workshops, provide one-on-one mentorship, and collaborate with faculty advisors and the TIMESTEP leadership team to continuously improve the program. To date, I have  <mark style="background-color: var(--highlight-dark);">mentored 38 undergraduate students</mark>, many of whom have gone on to write first-author publications, join prestigious REU programs, and work at national labs, such as JPL and FermiLab.
+                </p>
+                <p>
+                    Here are some of the materials I have developed for the program:
+                    <ol style="margin-top: 0;">
+                        <li>
+                            <a href="https://docs.google.com/presentation/d/1iQprPjeJjMgYqS9lKy95kyroSpeU1Oyq8fR-11elurU/edit?usp=sharing">Introduction to Git and Github</a>. Introducing students to the fundamentals concepts in Git and version control. Co-developed with Eden McEwen.
+                        </li>
+                        <li>
+                            <a href="files/intro_to_bash_worksheeet.pdf">Introduction to Bash</a>. A work-along worksheet introducing basic bash commands and scripting aimed at 2nd year undergraduates with little to no prior programming experience.
+                        </li>
+                        <li>
+                            <a href="https://colab.research.google.com/drive/1Usb8Kb2WwW-CPDYKnxulZc0f7beIYsDT">Python basics</a> and <a href="https://colab.research.google.com/drive/1QNzVruPZmIiatEZeYDB3AjEj0Ao0ZSc2"> Numpy and Matplotlib</a>. Interactive python notebooks (hosted on Collab) introducing fundamental python programming concepts, numpy arrays, and data visualization with matplotlib.
+                        </li>
+                    </ol>
+                </p>
+                <p>
+                    I received the <mark>Graduate Student Award in Teaching</mark> from the Department of Astronomy in 2025 for my work with TIMESTEP.
+                </p>
+                <h2 id="300a"> 
                     Astro 300A: Dynamics 
                 </h2>
                 <p>
@@ -73,14 +95,13 @@
                     <mark>Teaching Assistant</mark> for <a href="https://astro.arizona.edu/person/kathryne-j-daniel">Professor Kate Daniel</a> in Spring 2025 and Spring 2026. As the TA, I held office hours, updated and graded all homework assignments, and provided feedback on over 25 students' solutions.
                 </p>
                 <p>
-                    Significantly, I designed and gave two lectures connecting the class material to my current research on supermassive binary black holes. The <a href="files/astro300a1.pdf" target="_blank">first lecture</a> covered dynamical interactions that drive the inspiral of supermassive binary black holes: I walked them through an order-of-mag estimate of dynamical friction timescales and compared it to the gravitational wave inspiral timescale. The goal was to demonstrate how professional astrophysicists gain intuition for complicated systems. The <a href="files/astro300a2.pdf" target="_blank">second lecture</a> covered the methods I use in my current research. The goal was to demonstrate how research is performed (in one specific method) at the forefront of the field.
+                    I designed and gave two lectures connecting the class material to my current research on supermassive binary black holes. The <a href="files/astro300a1.pdf" target="_blank">first lecture</a> covered dynamical interactions that drive the inspiral of supermassive binary black holes: I walked them through an order-of-mag estimate of dynamical friction timescales and compared it to the gravitational wave inspiral timescale. The goal was to demonstrate how professional astrophysicists gain intuition for complicated systems. The <a href="files/astro300a2.pdf" target="_blank">second lecture</a> covered the methods I use in my current research. The goal was to demonstrate how research is performed (in one specific method) at the forefront of the field.
                 </p>
 
 
-                <h2> Astro 202: Life in the Universe </h2>
+                <h2 id="202"> Astro 202: Life in the Universe </h2>
                 <p>
-                    <mark>Teaching Assistant</mark> for <a href="https://astro.arizona.edu/person/laird-close">Professor Laird Close</a> in Fall 2025. 
-                </p>
+                    <mark>Teaching Assistant</mark> for <a href="https://astro.arizona.edu/person/laird-close">Professor Laird Close</a> in Fall 2025. I held weekly office hours and wrote and graded five in-class quizzes. 
 
                 <!-- <h2>TIMESTEP Internship</h2> 
                 <p>[<a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">website</a>]</p>
