fix footer in contact.html

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <div id="footer-container"></div>
 
         <script>
-        fetch("pafooter.html")
+        fetch("partials/footer.html")
             .then(res => res.text())
             .then(html => document.getElementById("footer-container").innerHTML = html);
         </script>
