fix talk formatting

--- a/research.html
+++ b/research.html
@@ -155,7 +155,7 @@
                             <!-- [<a class="nu" href="files/texas2025.pdf">slides</a>] -->
 
                         </li> 
-                        <li>
+                        <li style="margin-top: 20px;">
                             "Binary Black Holes Gone MAD"
                             
                             <mark style="background-color: var(--highlight-dark);">Event Horizon Telescope Theory Working Group Meeting</mark>, November 2025. (Virtual)
@@ -163,7 +163,7 @@
                             [<a class="nu" href="files/ehtnov2025.pdf">slides</a>]
 
                         </li>
-                        <li>
+                        <li style="margin-top: 20px;">
                             "Eccentric Binary Black Holes: MHD Simulations in Full GR Reveal Novel Periodicities in Jet Power and Synchrotron Spectra,"
                             
                             <mark style="background-color: var(--highlight-dark);">American Physics Society Global Summit</mark>, April 2025. (Contributed talk)
