updated publication information

--- a/research.html
+++ b/research.html
@@ -102,9 +102,9 @@
 
                             "Binary black holes gone MAD: Magnetically arrested minidisks around nonspinning black holes,"
                             
-                            <mark style="background-color: var(--highlight-dark);">arXiv:2509.18254</mark>. Accepted to Phys. Rev. D.
+                            <mark style="background-color: var(--highlight-dark);">Phys. Rev. D 112, 103050</mark>.
                             
-                            [<a class="nu" href="https://arxiv.org/abs/2509.18254">arXiv</a>] [<a class="nu" href="files/binary_mad.pdf">pdf</a>]
+                            [<a class="nu" href="https://journals.aps.org/prd/abstract/10.1103/g98b-m8m1">publisher</a>] [<a class="nu" href="files/binary_mad.pdf">pdf</a>]
 
                         </li>
                         <li style="margin-top: 20px;">
