--- a/research.html
+++ b/research.html
@@ -150,9 +150,9 @@
                         <li>
                             "Coincident Multimessenger Bursts from Eccentric Supermassive Binary Black Holes,"
                             
-                            <mark style="background-color: var(--highlight-dark);">33rd Texas Symposium on Relativistic Astrophysics</mark>, December 2025. (Scheduled)
+                            <mark style="background-color: var(--highlight-dark);">33rd Texas Symposium on Relativistic Astrophysics</mark>, December 2025. (Contributed talk)
 
-                            <!-- [<a class="nu" href="files/texas2025.pdf">slides</a>] -->
+                            [<a class="nu" href="files/texas2025.pdf">slides</a>]
 
                         </li> 
                         <li style="margin-top: 20px;">
