update formatting; shorten texas slides

--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
         <div class="grid-container">
 
             <div class="section" id="outreach">
-                <div class="content" style="width: 100%; margin: auto;">
+                <div class="content" style="width: clamp(375px, 100%, 1000px);">
                     <h2>Astronomy on Tap </h2>
                     <p>[<a class="nu" href="https://www.youtube.com/live/xdDyrJsMcR4?si=JGNTEoBLXJqK-WhK&t=2667" target="_blank">recording</a>] [<a class="nu" href="files/spacedrafts107.pdf">slides</a>]</p>
 
