--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
 
             <div class="section" id="teaching">
                 <h1> Teaching/Mentorship </h1>
-                <div class="content" style="width: 100%; margin: auto;">
+                <div class="content" style="width: clamp(375px, 100%, 1000px);">
                     <p>
                         I am passionate about developing programs that increase undergraduate student success in astrophysics research. I currently focus on two aspects of this: 1. training students with <mark style="background-color: var(--highlight-dark);">fundamental technical skills</mark> for research, and 2. providing mentorship and a support structure to create <mark style="background-color: var(--highlight-dark);">sustainable success</mark> and increase retention of underrepresented groups.
                     </p>
